add url on geopulse

--- a/dashboard.html
+++ b/dashboard.html
@@ -435,7 +435,7 @@ button, input, optgroup, select, textarea {
 
   <div id="content">
     <div id="map"></div>
-<p class="geopulseaname">@GeoPulse Analytics</p>
+<p class="geopulseaname"><a href="https://geopulsea.com/" class="text-decoration-none">@GeoPulse Analytics</a></p>
 <!-- add button for open table -->
 
 <button id="openTableBtn"><img src="png/dtabasetable.png" alt="" class="tablebtn"></button>
