--- a/geometry_page.html
+++ b/geometry_page.html
@@ -71,7 +71,7 @@
 							font-weight: bold;
 							/* background-color: rgba(173, 216, 230, 0.5); */
 							font-size: 10px;
-						  ">@GeoPulse Analytics</p>
+						  "><a href="https://geopulsea.com/" class="text-decoration-none">@GeoPulse Analytics</a></p>
 
 						<div id="table-container">
 							<table id="workTable" class="table table-bordered table-hover" style="width: 100% !important; font-size: 10px;" >
