--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
  
 
     <div id="map"></div>
-    <p class="geopulseaname">@GeoPulse Analytics</p>
+    <p class="geopulseaname"><a href="https://geopulsea.com/" class="text-decoration-none">@GeoPulse Analytics</a></p>
 
     <div>
       <img src="png/pmcjpeg.png" alt="" class="logopng1"style="">
