changes on files folder

--- a/dashboard.html
+++ b/dashboard.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PMC</title>
-  <link rel="stylesheet" href="C_form.css" />
-  <!-- <link rel="stylesheet" href="style.css" /> -->
+  <link rel="stylesheet" href="css/C_form.css" />
+  <!-- <link rel="stylesheet" href="css/style.css" /> -->
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   
   <!-- Stylesheets -->
@@ -61,7 +61,7 @@
 
     #map {
     top: 0px;
-    left: -12px;
+    left: -12%;
     height: 100vh;
     width: 100vw;
     z-index: 0;
@@ -286,7 +286,7 @@ button, input, optgroup, select, textarea {
   </style>
 </head>
 
-<body class="overflow-hidden" id="body-pd" class="" style="background-color: #f3f3f3">
+<body class="overflow-hidden"  class="" style="background-color: #f3f3f3">
   <div class="sidebar" id="mySidenav" type="button">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-solid fa-minus"
         style="width: 15px; "></i></a>
@@ -413,26 +413,7 @@ button, input, optgroup, select, textarea {
       <div class="filter">
         <i class="fas fa-filter nav_icon" onclick="openNav()"></i>
       </div>
-      <!-- <div class="l-navbar" id="nav-bar">
-        <nav class="nav">
-          <div>
-            <a href="#" class="nav_logo"> </a>
-
-            <div class="nav_list">
-            
-
-              <div class="closebtn" onclick="closeNav()">&times;
-
-                
-
-              </div>
-            </div>
-            <a href="#" class="nav_link">
-              <i class="bx bx-log-out nav_icon"></i>
-            </a>
-        </nav>
-      </div> -->
-
+   
   <div id="content">
     <div id="map"></div>
 <p class="geopulseaname"><a href="https://geopulsea.com/" class="text-decoration-none">@GeoPulse Analytics</a></p>
@@ -519,8 +500,8 @@ button, input, optgroup, select, textarea {
 
     <script src="libs/feat.js"></script>
 <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
-  <script src="index.js"></script>
-  <script src="select2.js"></script>
+  <script src="js/index.js"></script>
+  <script src="js/select2.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
