--- a/edit-feature.html
+++ b/edit-feature.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PMC</title>
     <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="C_form.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/C_form.css" />
     <!-- legend -->
  
 
@@ -191,7 +191,7 @@
       </main>
       
     </div>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
     <script>
       // Create a custom control
 var drawControl = L.control({ position: 'topleft' });
