--- a/Conceptual_form.html
+++ b/Conceptual_form.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>PMC</title>
 		<link rel="icon" href="png/pmcjpeg.png" type="image/x-icon" />
-		<link rel="stylesheet" href="C_form.css" />
+		<link rel="stylesheet" href="css/C_form.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" />
 
@@ -51,30 +51,31 @@
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
 		<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	</head>
-	<body id="body-pd" class="bg-light">
-		<header class="header" id="header">
+	<body class="bg-light">
+		<img src="png/pmcjpeg.png" alt="" class="logopng1" >
+		<!-- <header class="header" id="header">
 			<div><h5>GeoPulse</h5></div>
 			<div class="header_img me-5">
 				<img src="user.png" alt />
 			</div>
-		</header>
+		</header> -->
 		<div id="content">
 			<!--Container Main start-->
 			<!-- Button container -->
-			<div id="button-container">
+			<!-- <div id="button-container">
 				<button class="toggle-button" id="create-work-button" onclick="showCreateWork()">CREATE WORK</button>
-				<!-- <button class="toggle-button" id="map-view-button" onclick="showMapView()">MARK AREA</button> -->
-			</div>
+				<button class="toggle-button" id="map-view-button" onclick="showMapView()">MARK AREA</button>
+			</div> -->
 			<!-- Form section -->
-			<section id="form-section">
+			<section id="form-section" class="ms-5">
 				<!-- <h2>Create Work</h2> -->
 				<form id="projectForm" method="post">
 					<div class="mb-3 d-flex align-items-center fetchDataButtonContainer">
 						<label for="Id" class="form-label me-2">Id:</label>
-						<div class="flex-grow-1 me-2">
+						<div class="flex-grow-1 ">
 							<input type="text" class="form-control" id="Id" name="Id" required />
 						</div>
-						<button id="fetchDataButton" type="button" class="btn btn-primary btn-sm">Fetch Data</button>
+						<button id="fetchDataButton" type="button" class="btn btn-outline-primary btn-sm">Fetch Data</button>
 					</div>
 
 					<label for="projectNo">Project No:</label>
@@ -178,10 +179,10 @@
 					</div>
 					<div class="road-container">
 						<label for="Length">Length</label>
-						<input type="text" id="Length" name="Length" placeholder="Width in km" required />
+						<input type="text" id="Length" name="Length" placeholder="Length in km" required />
 					</div>
 					<a class="submitbtn">
-						<button type="button" onclick="submitForm()">Next</button>
+						<button type="button" class="btn btn-outline-success" onclick="submitForm()">Next</button>
 					</a>
 				</form>
 			</section>
@@ -253,6 +254,12 @@
 		></script>
 
 		<script>
+			// let depData =[];
+
+			// let zoneData= [];
+
+			// let wardData = [];
+
 			let depData = [
 				{
 					department_id: '1',
@@ -507,12 +514,7 @@
 					}
 				});
 
-				// function getQueryParam(param) {
-				// 	const urlParams = new URLSearchParams(window.location.search);
-				// 	return urlParams.get(param);
-				// }
-
-				// const worksAaApprovalId = getQueryParam('id');
+				
 
 				function fetchAndFillFormData(id) {
 					fetch('api-responses/all-project-data.json')
