--- a/geometry_page.html
+++ b/geometry_page.html
@@ -7,7 +7,7 @@
 		<link rel="icon" href="png/pmcjpeg.png" type="image/x-icon" />
 
 		<!-- External CSS -->
-		<link rel="stylesheet" href="C_form.css" />
+		<link rel="stylesheet" href="css/C_form.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css" />
@@ -38,7 +38,7 @@
 	
 	</head>
 
-	<body id="body-pd" class="bg-light">
+	<body  class="bg-light">
 
 		<img src="png/pmcjpeg.png" alt="" class="logopng1" >
 		<div id="content" style="width: 100%" class="container">
