--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PMC</title>
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
-  <link rel="stylesheet" href="style.css" />
-  <!-- <link rel="stylesheet" href="C_form.css" /> -->
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- <link rel="stylesheet" href="css/C_form.css" /> -->
 
   
   <style>
@@ -158,38 +158,8 @@
     <div>
       <img src="png/pmcjpeg.png" alt="" class="logopng1"style="">
     </div>
-    <!-- <div id="table-container">
-      <button id="closeTableBtn" class="close-button">
-        <i class="fas fa-times"></i>
-      </button>
-
-      <table id="workTable" class="table table-bordered table-hover" style="width: 70% !important">
-        <thead>
-          <tr>
-            <th>Name of Work</th>
-            <th>Work Type</th>
-            <th>Work Completion Date</th>
-            <th>Zone</th>
-            <th>Ward</th>
-            <th>Prabhag</th>
-          </tr>
-        </thead>
-        <tfoot>
-          <tr>
-
-            <th>Name of Work</th>
-            <th>Work Type</th>
-            <th>Work Completion Date</th>
-            <th>Zone</th>
-            <th>Ward</th>
-            <th>Prabhag</th>
-          </tr>
-        </tfoot>
-        <tbody></tbody>
-      </table>
-    </div> -->
- 
-  <script src="index-page.js"></script>
+    
+  <script src="js/index-page.js"></script>
   
   <script>
 
