--- a/libs/Leaflet.zoomslider-master/examples/markers.html
+++ b/libs/Leaflet.zoomslider-master/examples/markers.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="../src/L.Control.Zoomslider.css" />
   </head>
