--- a/libs/Leaflet.zoomslider-master/examples/touch.html
+++ b/libs/Leaflet.zoomslider-master/examples/touch.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="../src/L.Control.Zoomslider.css" />
   </head>
