--- a/geometry_page.html
+++ b/geometry_page.html
@@ -62,7 +62,7 @@
 
 					<div id="map"></div>
 
-						<p class="geopulseaname" style=" 
+						<a class="geopulseaname" style=" 
 							color: darkblue;
 							position: absolute;
 							z-index: 99999;
@@ -71,30 +71,11 @@
 							font-weight: bold;
 							/* background-color: rgba(173, 216, 230, 0.5); */
 							font-size: 10px;
-						  "><a href="https://geopulsea.com/" class="text-decoration-none">@GeoPulse Analytics</a></p>
+						  ">@GeoPulse Analytics</a>
 
 						<div id="table-container">
 							<table id="workTable" class="table table-bordered table-hover" style="width: 100% !important; font-size: 10px;" >
-								<!-- <thead>
-									<tr>
-										<th>Project No</th>
-										<th>Name of AA work</th>
-										<th>Work Type</th>
-										<th>Scope of Work</th>
-										<th>Project Financial Year</th>
-										<th>Department</th>
-										<th>Project Type</th>
-										<th>Project Office</th>
-										<th>Junior Engineer Name</th>
-										<th>Contact No</th>
-										<th>Date-In</th>
-										<th>Zone</th>
-										<th>Ward</th>
-										<th>Prabhag Name</th>
-										<th>Width</th>
-										<th>Length</th>
-									</tr>
-								</thead> -->
+								
 
 								<thead>
 								</thead>
