--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-
+ 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -188,6 +188,36 @@
         <tbody></tbody>
       </table>
     </div> -->
+
+    <div id="table-container">
+      <table id="workTable" class="table table-bordered table-hover" style="width: 100% !important; font-size: 10px;" >
+        <!-- <thead>
+          <tr>
+            <th>Project No</th>
+            <th>Name of AA work</th>
+            <th>Work Type</th>
+            <th>Scope of Work</th>
+            <th>Project Financial Year</th>
+            <th>Department</th>
+            <th>Project Type</th>
+            <th>Project Office</th>
+            <th>Junior Engineer Name</th>
+            <th>Contact No</th>
+            <th>Date-In</th>
+            <th>Zone</th>
+            <th>Ward</th>
+            <th>Prabhag Name</th>
+            <th>Width</th>
+            <th>Length</th>
+          </tr>
+        </thead> -->
+
+        <thead>
+        </thead>
+        
+        <tbody id="workTableData"></tbody>
+      </table>
+    </div>
  
   <script src="index-page.js"></script>
   
