--- a/dashboard.html
+++ b/dashboard.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+ 
+<head>                                   
+  <meta charset="UTF-8"/>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PMC</title>
 
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
@@ -24,7 +25,7 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.5/esri-leaflet-geocoder.css" />
 
-  <link rel="stylesheet" href="css/C_form.css" />
+  <link rel="stylesheet" href="css/C_form.css"/>
 
   <style>
   </style>
@@ -261,6 +262,7 @@
   <script src="js/select2.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.7/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- <script src="contex.js"></script> -->
 
 
   <script>
@@ -275,6 +277,8 @@
       // document.getElementById("content").style.margintop = "-109px";
 
       document.getElementById("content").style.zIndex = "0";
+
+
 
     }
 
@@ -1838,6 +1842,7 @@
       document.body.removeChild(link);
     }
   </script>
+  
 
 </body>
 
