--- a/dashboard2.html
+++ b/dashboard2.html
@@ -33,7 +33,7 @@
 <body class="overflow-hidden" class="" style="background-color: #f3f3f3">
   <div class="sidebar" id="mySidenav" type="button">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa-solid fa-minus"
-        style="width: 15px; "></i></a>
+        style="width: 15px;"></i></a>
         <div class="accordion" id="formAccordion">
 
             <!-- Office Section -->
@@ -377,7 +377,7 @@
 
   <script>
     function openNav() {
-      document.getElementById("mySidenav").style.width = "200px";
+      document.getElementById("mySidenav").style.width = "240px";
       document.getElementById("mySidenav").style.height = "360px";
       document.getElementById("mySidenav").style.zIndex = "99999";
       document.getElementById("mySidenav").style.top = "0px";
@@ -573,7 +573,7 @@
       var selectedWards = $("#admin_ward_name").val();
       var selectedVillages = $("#villages").val();
       var selectedProjectFi = $("#project_fi").val();
-      var selectedProjectOff = $("#project_Off").val();
+      var selectedProjectOff = $("#project_Off").val(hunjujpojikpo);
       var selectedStage = $("#stage").val();
       var selectedDateRange = $("#date_range").val();
       var selectedAmountComparison = $("#amount_comparison").val();
