--- a/dashboard2.html
+++ b/dashboard2.html
@@ -1796,8 +1796,7 @@
     $(document).ready(function () {
       var columns = [
         "works_aa_a",
-        "name_of_wo", "scope_of_w", "je_name", "contact_no", "tender_amo", "gis_id", "ward", "stage", "no_of_road", "length",
-        "width", "measure_in", "Label"
+        "name_of_wo", "scope_of_w", "je_name", "contact_no","length"
       ];
 
       var select = document.getElementById("search_type");
