--- a/dashboard.html
+++ b/dashboard.html
@@ -269,7 +269,7 @@
     <img src="png/pmcjpeg.png" alt="" class="logopng">
     <!-- <h5 class="text-dark fw-bold">Geo<span class="text-dark">Pulse</span></h5> -->
     <h5 class="tablestats"
-      style="    border: 2px solid blue;
+      style="    border: 2px solid darkblue;
       position: fixed;
       color: #04c;
       font-size: 100%;
@@ -289,12 +289,12 @@
 
 
       <select class="form-select ms-auto" aria-label="Select search category" id="search_type"
-        style="width: 90px; border-radius: 10px;">
+        style="width: 90px; border-radius: 10px;border: 2px solid darkblue;" >
         <option value="">Select Type</option>
       </select>
 
       <input class="form-control ms-2" type="search" placeholder="Search" aria-label="Search" id="searchInputDashboard"
-        style="height: 40px; width: 200px; border-radius: 10px" />
+        style="height: 40px; width: 200px; border-radius: 10px; border: 2px solid darkblue;" />
       <div id="autocompleteSuggestions" class="autocomplete-suggestions"></div>
 
     </div>
