--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 
   <div id="map"></div>
-  <a href="https://geopulsea.com/" class="geopulseaname">@GeoPulse Analytics</a>
+  <p href="https://geopulsea.com/" class="geopulseaname">@GeoPulse Analytics</p>
 
   <div>
     <img src="png/pmcjpeg.png" alt="" class="logopng1" style="">
