--- a/dashboard.html
+++ b/dashboard.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -268,28 +266,12 @@
     style="position: absolute; z-index: 9999;">
     <img src="png/pmcjpeg.png" alt="" class="logopng">
     <!-- <h5 class="text-dark fw-bold">Geo<span class="text-dark">Pulse</span></h5> -->
-    <h5 class="tablestats"
-      style="    border: 2px solid darkblue;
-      position: fixed;
-      color: #04c;
-      font-size: 100%;
-      /* background-color: rgba(173, 216, 230, 0.5); */
-      background-color: #c8d7ab70;
-      font-weight: bold;
-      top: 2%;
-      right: 45%;
-      padding: 3px;
-      border-radius: 5px 5px;
-      z-index: 9999;
-      text-shadow: black;
-      text-transform: uppercase;
-  ">
-    </h5>
+    <h5 class="tablestats">    </h5>
     <div class="input-group ">
 
 
       <select class="form-select ms-auto" aria-label="Select search category" id="search_type"
-        style="width: 90px; border-radius: 10px;border: 2px solid darkblue;" >
+        style="width: 90px; border-radius: 10px;border: 2px solid darkblue;">
         <option value="">Select Type</option>
       </select>
 
@@ -393,9 +375,6 @@
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
   <script src="libs/Leaflet.MousePosition-master/src/L.Control.MousePosition.js"></script>
-  <!-- <script src="libs/polyline-measure/line-measure.js"></script> -->
-  <!-- <script src="libs/leaflet-measure-master/leaflet-measure.js"></script> -->
-
   <script src="libs/feat.js"></script>
   <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
   <script src="js/index.js"></script>
@@ -409,10 +388,10 @@
       document.getElementById("mySidenav").style.width = "200px";
       document.getElementById("mySidenav").style.height = "360px";
       document.getElementById("mySidenav").style.zIndex = "99999";
-      document.getElementById("mySidenav").style.top = "0px";
+      document.getElementById("mySidenav").style.top = "23%";
       document.getElementById("mySidenav").style.scrollbarWidth = "thin";
 
-      document.getElementById("content").style.marginLeft = "9.5%";
+      document.getElementById("content").style.marginLeft = "0";
       // document.getElementById("content").style.margintop = "-109px";
 
       document.getElementById("content").style.zIndex = "0";
@@ -423,7 +402,7 @@
       document.getElementById("mySidenav").style.width = "0";
       // document.getElementById("content").style.margintop = "-19px";
 
-      document.getElementById("content").style.marginLeft = "9.5%";
+      document.getElementById("content").style.marginLeft = "0";
     }
 
 
@@ -516,50 +495,6 @@
       // loadAllData();
       loadInitialData();
     });
-
-
-
-
-    //    //Pop-Up show
-    // const layerDetails2 = {
-    //   "pmc:Exist_Road": ["rid", "surveystatus", "roadclass",  "swd_condition"],
-    //   "pmc:Reservations": ["OBJECTID_1", "Broad_LU", "Decision",  "Area"],
-    //   "pmc:storm_water": ["OBJECTID", "basin_name", "category",  "descriptio", "i_length"],
-    //   "pmc:Sewage1": ["OBJECTID", "STP_Name", "STP_Area",  "Category", "Unique_ID"],
-    //   "pmc:Sewage_Treatment_Plant": ["OBJECTID", "STP_Name", "STP_Area",  "Category", "Unique_ID"],
-    //   "pmc:Pumping_station": ["OBJECTID", "Unique_ID", "SPS_Name"],
-    //   "pmc:Data": ["works_aa_a", "name_of_wo", "departme_1",  "work_type","stage","scope_of_w","Budget_Code","Agency", "Project_Office", "zone_id", "zone", "ward", "tender_amo", "je_name", "contact_no"],
-    // };
-
-    // map.on("contextmenu", async (e) => {
-    //   let bbox = map.getBounds().toBBoxString();
-    //   let size = map.getSize();
-
-    //   for (let layer in layerDetails2) {
-    //       let selectedKeys = layerDetails2[layer];
-    //       let urrr = `https://pmc.geopulsea.com/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(e.containerPoint.x)}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${size.x}&HEIGHT=${size.y}&BBOX=${bbox}`;
-
-    //       try {
-    //           let response = await fetch(urrr);
-    //           let html = await response.json();
-
-    //           var htmldata = html.features[0].properties;
-    //           let txtk1 = "";
-    //           for (let key of selectedKeys) {
-    //               if (htmldata.hasOwnProperty(key)) {
-    //                   let value = htmldata[key];
-    //                   txtk1 += "<tr><td>" + key + "</td><td>" + value + "</td></tr>";
-    //               }
-    //           }
-
-    //           let detaildata1 = "<div style='max-height: 350px; max-height: 250px;'><table  style='width:70%;' class='popup-table' >" + txtk1 + "</td></tr><tr><td>Co-Ordinates</td><td>" + e.latlng + "</td></tr></table></div>";
-
-    //           L.popup().setLatLng(e.latlng).setContent(detaildata1).openOn(map);
-    //       } catch (error) {
-    //           console.error("Error fetching data:", error);
-    //       }
-    //   }
-    // });
 
 
 
@@ -801,187 +736,10 @@
       var layers = ["pmc:IWMS_point", "pmc:IWMS_line"];
       var typeName = layers.join(',');
 
-      var geoServerURL =
-        "https://pmc.geopulsea.com//geoserver/pmc/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=" +
-        typeName +
-        "&outputFormat=application/json&CQL_FILTER=" +
-        encodeURIComponent(cqlFilter);
+      var geoServerURL = "https://pmc.geopulsea.com//geoserver/pmc/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=" +
+        typeName + "&outputFormat=application/json&CQL_FILTER=" + encodeURIComponent(cqlFilter);
 
-        tableData(typeName, geoServerURL,cqlFilter)
-
-
-
-
-      // var layers = ["pmc:IWMS_point", "pmc:IWMS_line"];
-      // var typeName = layers.join(',');
-
-      // var geoServerURL =
-      //   "https://pmc.geopulsea.com//geoserver/pmc/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=" +
-      //   typeName +
-      //   "&outputFormat=application/json&CQL_FILTER=" +
-      //   encodeURIComponent(cqlFilter);
-
-
-
-      // var openTable = $(document).ready(function () {
-      //   // Function to toggle table visibility
-      //   $("#openTableBtn").click(function () {
-      //     var tableContainer = $("#table-container-dashboard");
-      //     var isOpen = tableContainer.css("display") !== "none";
-      //     if (isOpen) {
-      //       tableContainer.hide(); // Hide the table if it's already open
-      //     } else {
-      //       tableContainer.show(); // Show the table if it's closed
-      //     }
-      //   });
-
-
-
-
-      //   $.getJSON(geoServerURL, function (data) {
-      //     filteredData = data;
-
-      //     var totalcountofselectedrecords = filteredData.totalFeatures;
-      //     var totalTenderAmount = filteredData.features.reduce(function (total, project) {
-      //       var tenderAmount = parseFloat(project.properties.tender_amo);
-      //       return total + (isNaN(tenderAmount) ? 0 : tenderAmount / 100000);
-      //     }, 0);
-
-
-
-      //     var project = data.features;
-      //     const pageSize = 100; // Number of items per page
-      //     let currentPage = 1; // Current page number
-
-      //     function updateTable(project, page) {
-      //       const tableBody = document.getElementById('workTableDashboard').getElementsByTagName('tbody')[0];
-      //       tableBody.innerHTML = '';
-
-      //       const startIndex = (page - 1) * pageSize;
-      //       const endIndex = startIndex + pageSize;
-      //       const currentPageData = project.slice(startIndex, endIndex);
-
-      //       currentPageData.forEach(project => {
-      //         var tenderAmount = parseFloat(project.properties.tender_amo);
-      //         tenderAmount = isNaN(tenderAmount) ? 0 : tenderAmount / 100000;
-
-      //         const row = `
-      //       <tr data-coordinates='${JSON.stringify(project.geometry)}'>
-      //           <td>${project.properties.zone}</td>
-      //           <td>${project.properties.ward}</td>
-      //           <td>${project.properties.departme_1}</td>
-      //           <td>${project.properties.work_type}</td>
-      //           <td>${tenderAmount}</td>
-      //           <td>${project.properties.je_name}</td>
-      //           <td>${project.properties.Agency}</td>
-      //           <td>${project.properties.Project_Office}</td> 
-      //           <td>${project.properties.Budget_Code}</td>
-      //           <td>${project.properties.created_at}</td>
-      //           <td>${project.properties.Work_Completion_Date}</td>
-      //       </tr>`;
-
-      //         tableBody.insertAdjacentHTML('beforeend', row);
-      //       });
-
-      //       updatePaginationButtons(project.length);
-      //       const currentPageElement = document.getElementById('currentPage');
-      //       if (currentPageElement) {
-      //         currentPageElement.textContent = currentPage;
-      //       }
-      //     }
-
-      //     function updatePaginationButtons(totalItems) {
-      //       const totalPages = Math.ceil(totalItems / pageSize);
-      //       const pagination = document.getElementById('paginationControls');
-      //       pagination.innerHTML = '';
-
-      //       const previousButton = document.createElement('button');
-      //       previousButton.innerHTML = '<i class="fa-solid fa-backward"></i>';
-      //       previousButton.addEventListener('click', () => {
-      //         if (currentPage > 1) {
-      //           currentPage--;
-      //           updateTable(project, currentPage);
-      //         }
-      //       });
-      //       pagination.appendChild(previousButton);
-
-      //       const pageInfo = document.createElement('P');
-      //       pageInfo.textContent = `Page${currentPage}`;
-      //       pagination.appendChild(pageInfo);
-
-      //       const nextButton = document.createElement('button');
-      //       nextButton.innerHTML = '<i class="fa-solid fa-forward"></i>';
-      //       nextButton.addEventListener('click', () => {
-      //         if (currentPage < totalPages) {
-      //           currentPage++;
-      //           updateTable(project, currentPage);
-      //         }
-      //       });
-      //       pagination.appendChild(nextButton);
-      //     }
-
-      //     // Assuming you have an initial call to updateTable with the initial page
-      //     updateTable(project, currentPage);
-
-      //     $(".tablestats").html(`Total Amount - ${totalTenderAmount.toFixed(2)} L ,
-      //   Total Projects - ${totalcountofselectedrecords}`);
-
-
-
-      //     ///////////////////////////////// new added for speed  19-03-2024 ////////////////////////////////////////////////////
-
-
-
-      //     $("#workTableDashboard tbody").on("click", "tr", function () {
-      //       var coordinatesStr = $(this).data("coordinates");
-      //       var coordinatesObj = coordinatesStr;
-      //       var boundsLayer = L.geoJSON(coordinatesObj, {
-      //         style: {
-      //           fillColor: "blue", // Fill color
-      //           fillOpacity: 0.3, // Fill opacity
-      //           color: "blue", // Border color
-      //           weight: 2, // Border weight
-      //         },
-      //       }).addTo(map); // Add the bounds layer to the map
-
-      //       var bounds = boundsLayer.getBounds(); // Get the bounds of the layer
-      //       map.fitBounds(bounds).setZoom(17.5); // Fit map to the bounds and set zoom level
-
-      //       // Optionally, you can remove the bounds layer after a certain duration
-      //       setTimeout(function () {
-      //         map.removeLayer(boundsLayer);
-      //       }, 5000); // Remove the bounds layer after 5 seconds (adjust duration as needed)
-      //     });
-      //     // drag and drop
-      //     $(function () {
-      //       $("#table-container-dashboard").draggable();
-      //     });
-
-
-
-      //     // -----------------------
-      //     var printButton = $("#printButton")
-      //     var tablestats = $("#tablestats")
-      //     var isClosed = false;
-      //     // tableContainer.slideDown();
-      //     // tableContainer.css({
-      //     //   display: "flex",
-      //     //   flexDirection: "row",
-      //     //   justifyContent: "center",
-      //     // });
-
-      //     $("#closeTableBtnDashboard").click(function () {
-
-      //       var tableContainer = $("#table-container-dashboard");
-      //       tableContainer.hide();
-
-      //     });
-
-
-      //   });
-
-      // });
-
+      tableData(typeName, geoServerURL, cqlFilter)
 
       // ====================================
       function getRandomColor() {
@@ -1859,8 +1617,8 @@
       $("#search_type").change(function () {
         var selectedValue = $(this).val();
 
-// console.log("select dropdown", select);
-// console.log("dependent dropdown", selectedValue);
+        // console.log("select dropdown", select);
+        // console.log("dependent dropdown", selectedValue);
 
 
 
@@ -1915,19 +1673,19 @@
 
 
 
-              
-         var layers = ["pmc:IWMS_point", "pmc:IWMS_line"];
-      var typeName = layers.join(',');
 
-      var geoServerURL =
-        "https://pmc.geopulsea.com//geoserver/pmc/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=" +
-        typeName +
-        "&outputFormat=application/json&CQL_FILTER=" +
-        encodeURIComponent(cqlFilter);
+              var layers = ["pmc:IWMS_point", "pmc:IWMS_line"];
+              var typeName = layers.join(',');
 
-tableData(typeName, geoServerURL,cqlFilter)
+              var geoServerURL =
+                "https://pmc.geopulsea.com//geoserver/pmc/wms?service=WFS&version=1.1.0&request=GetFeature&typeName=" +
+                typeName +
+                "&outputFormat=application/json&CQL_FILTER=" +
+                encodeURIComponent(cqlFilter);
 
-console.log("hrrrrrrrrrrrrrrrrrr")
+              tableData(typeName, geoServerURL, cqlFilter)
+
+              console.log("hrrrrrrrrrrrrrrrrrr")
 
               // Apply filter to IWMS_point and IWMS_line layers
               IWMS_point.setParams({
@@ -2033,7 +1791,7 @@ console.log("hrrrrrrrrrrrrrrrrrr")
 
 
 
-function tableData(typeName, geoServerURL,cqlFilter){
+    function tableData(typeName, geoServerURL, cqlFilter) {
 
       var openTable = $(document).ready(function () {
         // Function to toggle table visibility
@@ -2148,8 +1906,8 @@ function tableData(typeName, geoServerURL,cqlFilter){
               },
             }).addTo(map); // Add the bounds layer to the map
 
-            var bounds = boundsLayer.getBounds(); 
-            map.fitBounds(bounds).setZoom(17.5); 
+            var bounds = boundsLayer.getBounds();
+            map.fitBounds(bounds).setZoom(17.5);
             setTimeout(function () {
               map.removeLayer(boundsLayer);
             }, 5000); // Remove the bounds layer after 5 seconds (adjust duration as needed)
@@ -2165,7 +1923,7 @@ function tableData(typeName, geoServerURL,cqlFilter){
           var printButton = $("#printButton")
           var tablestats = $("#tablestats")
           var isClosed = false;
-        
+
 
           $("#closeTableBtnDashboard").click(function () {
 
