--- a/dashboard.html
+++ b/dashboard.html
@@ -270,9 +270,7 @@
     style="position: absolute; z-index: 9999;">
     <img src="png/pmcjpeg.png" alt="" class="logopng">
     <!-- <h5 class="text-dark fw-bold">Geo<span class="text-dark">Pulse</span></h5> -->
-    <h5 class="tablestats"
-      style="  
-  ">
+    <h5 class="tablestats">
     </h5>
     <div class="input-group ">
 
@@ -312,7 +310,7 @@
         </button>
 
         <p id="tablestats" class="tablestats"
-          style="position: fixed; color: darkblue; font-size: 12px;font-weight: bold; padding-bottom: 10px; z-index: 9999; margin-top: 2px; margin-left:0px;">
+          style="position: fixed; color: darkblue; font-size: 12px;font-weight: bold;  z-index: 9999; margin-top: 45px; margin-left:0px;">
 
         </p>
 
@@ -398,7 +396,8 @@
       document.getElementById("mySidenav").style.width = "200px";
       document.getElementById("mySidenav").style.height = "360px";
       document.getElementById("mySidenav").style.zIndex = "99999";
-      document.getElementById("mySidenav").style.top = "0px";
+      document.getElementById("mySidenav").style.top = "150px";
+      document.getElementById("mySidenav").style.left = "12px";
       document.getElementById("mySidenav").style.scrollbarWidth = "thin";
 
       document.getElementById("content").style.marginLeft = "9.5%";
