--- a/drainage.html
+++ b/drainage.html
@@ -7,11 +7,9 @@
   <title>PMC</title>
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css" />
-  <!-- <link rel="stylesheet" href="C_form.css" /> -->
-
 
   <style>
-    #map {
+    /* #map {
       top: 0px;
       left: 0px;
       height: 99vh;
@@ -40,7 +38,7 @@
     background-clip: padding-box;
     border: 2px solid darkblue;
     
-}
+} */
   </style>
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
