--- a/electric-work.html
+++ b/electric-work.html
@@ -149,10 +149,9 @@
       <tbody id="workTableData"></tbody>
     </table>
   </div>
+  <script src="js/config.js"></script>
 
- <script src="js/config.js"></script>
-
-  <script src="js/road.js"></script>
+  <script src="js/electic-work.js"></script>
 
   <script>
 
