--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
       <tbody id="workTableData"></tbody>
     </table>
   </div>
+  <script src="js/config.js"></script>
 
   <script src="js/index-page.js"></script>
 
