--- a/road.html
+++ b/road.html
@@ -121,7 +121,8 @@
  <script src="js/config.js"></script>
 
   <script src="js/road.js"></script>
-  <script src="js/legend.js"></script>
+  <script src="js/mainmodal/legend.js"></script>
+  <script src="js/mainmodal/contextMenu.js"></script>
 
   <script>
 
