add layers change

--- a/building.html
+++ b/building.html
@@ -9,7 +9,7 @@
 		<!-- <link rel="stylesheet" href="C_form.css" /> -->
 
 		<style>
-			#map {
+			/* #map {
 				top: 0px;
 				left: 0px;
 				height: 99vh;
@@ -32,7 +32,9 @@
 			.leaflet-touch .leaflet-bar {
 				background-clip: padding-box;
 				border: 2px solid darkblue;
-			}
+			} */
+
+
 		</style>
 		<!-- bootstrap -->
 		<link
