--- a/road.html
+++ b/road.html
@@ -7,7 +7,7 @@
   <title>PMC</title>
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css" />
-  <!-- <link rel="stylesheet" href="C_form.css" /> -->
+  
 
 
   <!-- bootstrap -->
@@ -121,7 +121,7 @@
  <script src="js/config.js"></script>
 
   <script src="js/road.js"></script>
-  <script src="js/mainmodal/legend.js"></script>
+  <!-- <script src="js/mainmodal/legend.js"></script> -->
   <script src="js/mainmodal/contextMenu.js"></script>
 
   <script>
