--- a/building.html
+++ b/building.html
@@ -394,7 +394,7 @@
 									});
 
 									setTimeout(() => {
-										window.location.href = 'geometry_page.html';
+										window.location.href = `geometry_page.html?id=`+response.lastInsertIdIWMS+'&department=Building'+`&lastInsertedId=`+lastInsertedId;
 									}, 2100);
 								},
 								error: function (xhr, status, error) {
