add updated geometry page

--- a/dashboard.html
+++ b/dashboard.html
@@ -1891,11 +1891,17 @@ var selectButton = $('#headingWard button');
 
     $(document).ready(function () {
       var columns = [
-        "works_aa_a",
-        "name_of_wo",
-        "scope_of_w",
-        "je_name",
-        "length"
+        // "works_aa_a",
+        // "name_of_wo",
+        // "scope_of_w",
+        // "je_name",
+        // "length"
+        // -----------------------------
+        // "Work_ID",
+        "Scope_of_Work",
+        "Name_of_Work",
+        "Name_of_JE",
+        "length",
       ];
 
       var select = document.getElementById("search_type");
